2006-02-03  Piotr Fusik  <fox@scene.pl>
* antic.c: a bug in do_border_gtia10 caused a crash on machines that don't
  support unaligned words (problem reported by Mark Watson), on other machines
  sprites on the right border in GTIA 10 modes were incorrectly shifted;
  a pointer cast in DO_BORDER_1 replaced with IS_ZERO_ULONG, just in case


2006-01-31  Piotr Fusik  <fox@scene.pl>
* win32/screen_win32.c: made DDERR_UNSUPPORTED user-friendly ;-)

* atari.h, input.c, statesav.c, ui.c, ui.h, ui_basic.c, dc/atari_dc.c,
  dc/atari800.cfg, dc/config.h, dc/dc_chdir.c, dc/icon.h, dc/Makefile.dc,
  dc/version.h, dc/vmu.c, dc/vmu.h, DOC/CHANGES.dc, DOC/README.dc:
  integrated Christian Groessler's SEGA Dreamcast port


2006-01-26  Piotr Fusik  <fox@scene.pl>
* ui_basic.c: directory that has been left (via Backspace or "[..]")
  is highlighted in the parent directory; display an error message
  when cannot enter a directory


2006-01-14  Piotr Fusik  <fox@scene.pl>
* monitor.c: "D" command displayed FFFE and FFFF instruction addresses
  as FFFFFFFE and FFFFFFFF respectively


2006-01-11  Troy Ayers  <holiday42@gmail.com>
* atari_ps2.c: Added routines for sound_pauses and sound resume for the PS2


2006-01-09  Piotr Fusik  <fox@scene.pl>
* pokeysnd.c: some fixes for stereo RF pokeysnd, essential for ASAP


2006-01-07  Piotr Fusik  <fox@scene.pl>
* atari.[ch], memory.c, ui.c: 192 KB RAM


2006-01-06  Piotr Fusik  <fox@scene.pl>
* configure.ac: small fix for sound on PS2

* DOC/BUGS: 5200 Joust sets all colors to black on PAL machines
  (not Atari800's bug)


** 2.0.1 released on 2006-01-02

2006-01-02  Petr Stehlik  <pstehlik@sophics.cz>
* atari_sdl.c: keysym.unicode is not defined for KEYUP event (reported
  by Patrice Mandin, the Atari libSDL port author)

* various doc files: update for 2.0.1 bugfix release


2006-01-02  Piotr Fusik  <fox@scene.pl>
* devices.c: H: device defaults to read-only

* atari_sdl.c: keys used for joystick emulation shouldn't be ignored in UI